src/test/deca/syntax/valid/synt/decl_inst.deca
// Description:
//    tests de programme avec NoOperation et delcaration multiple
//    syntaxiquement correct
//
// Resultats:
//    ok
//
// Historique:
//    cree le 16/01/2023
//

{
    float x,y,z;
    ;;;;;;;;
}